--- a/src/app/component/admin/pages/customer/customer.component.html
+++ b/src/app/component/admin/pages/customer/customer.component.html
@@ -76,6 +76,9 @@
         <td *ngIf="rowData['plan'] === 'Bono'">
           {{ rowData["endDate"] | CustomDate }}
         </td>
+        <td>
+          {{ rowData["terms"] ? "Si" : "No" }}
+        </td>
         <button
           pButton
           pRipple
