--- a/src/app/component/user/pages/user-doc/user-doc.component.html
+++ b/src/app/component/user/pages/user-doc/user-doc.component.html
@@ -75,7 +75,6 @@
             />
             <label for="name">Nombre</label>
           </span>
-
           <span class="p-float-label">
             <input
               formControlName="lastName"
@@ -123,7 +122,7 @@
               type="text"
               pInputText
             />
-            <label for="float-input">Mote</label>
+            <label for="float-input">Alias</label>
           </span>
           <span class="p-float-label">
             <p-dropdown
@@ -152,6 +151,14 @@
             />
             <label for="float-input">Estado</label>
           </span>
+        </div>
+        <div class="terms">
+          <p-inputSwitch formControlName="terms"></p-inputSwitch>
+          <h5 class="text-style-principal">
+            Autorizo a este centro a utilizar mi imagen en fotografías y videos
+            de las actividades realizadas, con fines publicitarios en medios
+            como redes sociales, carteles, buzoneo, televisión, etc.
+          </h5>
         </div>
         <div class="form-button">
           <button
