--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="header">
   <div class="header-container">
-    <img src="../../../assets/icons/tai-center-logo-full-color.svg" />
+    <div class="header-container-img">
+      <img src="../../../assets/icons/tai-center-logo-full-color.svg" />
+    </div>
     <p class="content-secondary s-25">
       Tu centro de entrenamiento en Bellreguard
     </p>
@@ -13,9 +15,73 @@
       icon="pi pi-user"
       routerLink="/login"
     ></button>
+    <button
+      pButton
+      pRipple
+      type="button"
+      icon="pi pi-arrow-down"
+      class="p-button-rounded p-button-outlined"
+      (click)="move()"
+    ></button>
   </div>
 </div>
-<div class="plan-container">
+<!--<img src="../../../assets/img/cross.png" />
+<img src="../../../assets/img/taekwondo.png" />-->
+<!--<div class="plan-container">
+  <h1 class="hard-title">Wods Disponibles</h1>
+  <div class="plan-container-wods">
+    <p-card>
+      <ng-template pTemplate="header">
+        <div class="wod-header">
+          <span class="hard-title">CROSS TRAINING</span>
+        </div>
+      </ng-template>
+      <div class="wod">
+        <img class="cross-img" src="../../../assets/img/cross.png" />
+        <p>
+          El Cross Training es un deporte que engloba diferentes ejercicios de
+          alta intensidad, tanto de fuerza como cardiovasculares, para trabajar
+          todos los grupos musculares. Su principal objetivo es potenciar la
+          condición física del deportista e incrementar su rendimiento deportivo
+        </p>
+      </div>
+    </p-card>
+    <p-card>
+      <ng-template pTemplate="header">
+        <div class="wod-header">
+          <span class="hard-title">H.I.I.T</span>
+        </div>
+      </ng-template>
+      <div class="wod">
+        <img class="hiit-img" src="../../../assets/img/hiit.png" />
+        <p>
+          El HIIT (siglas de “High Intensity Interval Trainging”, que significa
+          “entrenamiento interválico de alta intensidad”) es un tipo de
+          entrenamiento deportivo basado en sesiones de intervalos cortos y muy
+          intensos que alternan esfuerzo y recuperación.
+        </p>
+      </div>
+    </p-card>
+    <p-card>
+      <ng-template pTemplate="header">
+        <div class="wod-header">
+          <span class="hard-title">G.A.P</span>
+        </div>
+      </ng-template>
+      <div class="wod">
+        <img class="hiit-img" src="../../../assets/img/hiit.png" />
+        <p>
+          El HIIT (siglas de “High Intensity Interval Trainging”, que significa
+          “entrenamiento interválico de alta intensidad”) es un tipo de
+          entrenamiento deportivo basado en sesiones de intervalos cortos y muy
+          intensos que alternan esfuerzo y recuperación.
+        </p>
+      </div>
+    </p-card>
+  </div>
+</div>-->
+
+<div class="plan-container" id="tarifas">
   <h1 class="hard-title">Tarifas</h1>
   <div class="plan-container-cards">
     <p-card header="1 Semana">
