--- a/src/app/component/user/pages/center-rule/center-rule.component.html
+++ b/src/app/component/user/pages/center-rule/center-rule.component.html
@@ -1,4 +1,4 @@
-<div class="container-reserve">
+<div class="container-reserve" *ngIf="rules.length > 0">
   <h1>Normas del centro</h1>
   <p-card>
     <div *ngFor="let rule of rules">
