--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -140,4 +140,9 @@
     </p-card>
   </div>
 </div>
+<div class="plan-container">
+  <h1 class="hard-title">Calendario</h1>
+</div>
+<app-calendar></app-calendar>
+
 <app-footer></app-footer>
