--- a/src/app/component/admin/pages/attendance-wod/attendance-wod.component.html
+++ b/src/app/component/admin/pages/attendance-wod/attendance-wod.component.html
@@ -40,6 +40,7 @@
   <p-messages [(value)]="notifications" [enableService]="false"></p-messages>
 </div>
 <div class="container-wods">
+  <h3 class="title">Asistencia</h3>
   <p-panel
     [header]="getHeaderName(dataGrouped[keys][0])"
     [toggleable]="true"
