--- a/src/app/component/user/pages/user-doc/user-doc.component.html
+++ b/src/app/component/user/pages/user-doc/user-doc.component.html
@@ -38,7 +38,7 @@
   </ng-template>
 </p-confirmDialog>
 <div class="container-user">
-  <h5 class="hard-title s-25">Bienvenido {{ userName }}</h5>
+  <h5 class="hard-title s-25">Bienvenid@ {{ userName }}</h5>
   <p-card>
     <p class="text-style-principal">
       Mantén actualizada tu información, así podremos conocerte mejor
@@ -179,7 +179,7 @@
       responsiveLayout="stack"
       styleClass="p-datatable-sm"
       [paginator]="true"
-      [rows]="10"
+      [rows]="5"
     >
       <ng-template pTemplate="caption">
         <div class="flex align-items-center justify-content-between">
@@ -251,5 +251,30 @@
         </tr>
       </ng-template>
     </p-table>
+    <div class="statistics-container">
+      <h5 class="hard-title s-25">Histórico de Entrenamiento Último Mes</h5>
+      <div class="chart-container">
+        <div class="chart">
+          <h5 class="hard-title">Wods del Mes</h5>
+          <p-chart
+            type="pie"
+            [data]="dataWods"
+            [options]="chartOptions"
+            [responsive]="true"
+            [style]="{ width: '80%' }"
+          ></p-chart>
+        </div>
+        <div class="chart">
+          <h5 class="hard-title">Asistencias del Mes</h5>
+          <p-chart
+            type="pie"
+            [data]="dataAttend"
+            [options]="chartOptions"
+            [responsive]="true"
+            [style]="{ width: '80%' }"
+          ></p-chart>
+        </div>
+      </div>
+    </div>
   </p-card>
 </div>
