--- a/src/app/component/admin/pages/historical-wod/historical-wod.component.html
+++ b/src/app/component/admin/pages/historical-wod/historical-wod.component.html
@@ -42,8 +42,38 @@
           <td>
             {{ rowData["state"] }}
           </td>
+          <td>
+            <button
+              pButton
+              pRipple
+              pTooltip="Confirmar asistencia"
+              icon="pi pi-check"
+              class="p-button-rounded p-button-success"
+              (click)="confirmAttend(rowData)"
+              *ngIf="rowData['attend'] === 'Pendiente'"
+            ></button>
+          </td>
         </tr>
       </ng-template>
     </p-table>
   </p-panel>
 </div>
+<p-confirmDialog #cd key="confirm-id">
+  <ng-template pTemplate="footer">
+    <button
+      pButton
+      pRipple
+      label="Aceptar"
+      class="p-button-rounded btn-h btn-primary"
+      (click)="cd.accept()"
+    ></button>
+    <button
+      pButton
+      pRipple
+      type="button"
+      class="p-button-rounded btn-h btn-secondary"
+      label="Cancelar"
+      (click)="cd.reject()"
+    ></button>
+  </ng-template>
+</p-confirmDialog>
