new feature images

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -28,61 +28,16 @@
     </div>
   </div>
 </div>
-<!--<img src="../../../assets/img/cross.png" />
-<img src="../../../assets/img/taekwondo.png" />-->
-<!--<div class="plan-container">
-  <h1 class="hard-title">Wods Disponibles</h1>
-  <div class="plan-container-wods">
-    <p-card>
-      <ng-template pTemplate="header">
-        <div class="wod-header">
-          <span class="hard-title">CROSS TRAINING</span>
-        </div>
-      </ng-template>
-      <div class="wod">
-        <img class="cross-img" src="../../../assets/img/cross.png" />
-        <p>
-          El Cross Training es un deporte que engloba diferentes ejercicios de
-          alta intensidad, tanto de fuerza como cardiovasculares, para trabajar
-          todos los grupos musculares. Su principal objetivo es potenciar la
-          condición física del deportista e incrementar su rendimiento deportivo
-        </p>
-      </div>
-    </p-card>
-    <p-card>
-      <ng-template pTemplate="header">
-        <div class="wod-header">
-          <span class="hard-title">H.I.I.T</span>
-        </div>
-      </ng-template>
-      <div class="wod">
-        <img class="hiit-img" src="../../../assets/img/hiit.png" />
-        <p>
-          El HIIT (siglas de “High Intensity Interval Trainging”, que significa
-          “entrenamiento interválico de alta intensidad”) es un tipo de
-          entrenamiento deportivo basado en sesiones de intervalos cortos y muy
-          intensos que alternan esfuerzo y recuperación.
-        </p>
-      </div>
-    </p-card>
-    <p-card>
-      <ng-template pTemplate="header">
-        <div class="wod-header">
-          <span class="hard-title">G.A.P</span>
-        </div>
-      </ng-template>
-      <div class="wod">
-        <img class="hiit-img" src="../../../assets/img/hiit.png" />
-        <p>
-          El HIIT (siglas de “High Intensity Interval Trainging”, que significa
-          “entrenamiento interválico de alta intensidad”) es un tipo de
-          entrenamiento deportivo basado en sesiones de intervalos cortos y muy
-          intensos que alternan esfuerzo y recuperación.
-        </p>
-      </div>
-    </p-card>
-  </div>
-</div>-->
+<div class="plan-container">
+  <h1 class="hard-title">Equipo Tai en las carreras OCR</h1>
+  <p class="gallery-description">
+    Hemos estado presente en varias carreras <a>OCR</a>, nuestros atletas no
+    solo pusieron a prueba su destreza fisica, sino que también pasaron un
+    tiempo agradable en familia y amigos, eso sí, la comida y la cerveza al
+    final de la carrera no faltaron!!!
+  </p>
+  <app-gallery></app-gallery>
+</div>
 
 <div class="plan-container" id="tarifas">
   <h1 class="hard-title">Tarifas</h1>
