--- a/src/app/component/admin/pages/historical-wod/historical-wod.component.scss
+++ b/src/app/component/admin/pages/historical-wod/historical-wod.component.scss
@@ -25,6 +25,24 @@
     }
   }
 
+  .halterofilia {
+    .p-panel-header {
+      background-color: rgb(204, 96, 24);
+    }
+  }
+
+  .halterofilia {
+    .p-panel-header {
+      background-color: rgb(204, 96, 24);
+    }
+  }
+
+  .gymnastic {
+    .p-panel-header {
+      background-color: rgb(110, 116, 235);
+    }
+  }
+
   .open-center {
     .p-panel-header {
       background-color: rgb(223, 52, 52);
