--- a/src/app/component/root/root.component.html
+++ b/src/app/component/root/root.component.html
@@ -19,7 +19,7 @@
           icon="pi pi-sign-out"
           (onClick)="logOut()"
         ></p-button>
-        Cerrar sesión
+        {{ "core.logout" | translate }}
       </label>
     </div>
   </div>
