--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,26 +1,25 @@
 <footer class="footer-container">
   <div class="footer-container-body">
     <div class="footer-description">
-      <h5 class="title mt-10">Ven y conócenos:</h5>
+      <h5 class="title mt-10">{{ "footer.come" | translate }}</h5>
       <img src="../../../assets/icons/tai-center-logo-secondary-color.svg" />
       <p class="content-secondary">
-        Centro deportivo adecuado para que puedas mejorar tu estado físico con
-        actividades como CROSS, HIIT, GAP y OPEN BOX.
+        {{ "footer.description" | translate }}
       </p>
     </div>
     <div class="footer-social-media">
-      <h5 class="title mt-10">Siguenos en nuestras redes sociales:</h5>
+      <h5 class="title mt-10">{{ "footer.titleContact" | translate }}</h5>
       <a href="https://www.instagram.com/tai_center/" target="_blank">
         <i class="pi pi-instagram mt-10"></i>
       </a>
       <h5 class="title mt-10">Contacto:</h5>
       <p class="content-secondary">
-        Movil: +34 654 07 00 17 <br />
-        Email: taicenterbellreguard@gmail.com
+        {{ "footer.movil" | translate }}: +34 654 07 00 17 <br />
+        {{ "core.email" | translate }}: taicenterbellreguard@gmail.com
       </p>
     </div>
     <div class="footer-address">
-      <h5 class="title mt-10">Estamos ubicados en:</h5>
+      <h5 class="title mt-10">{{ "footer.location" | translate }}</h5>
       <div class="footer-address-iframe mt-10">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.024613294538!2d-0.16642798466558067!3d38.946266079563244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd61e861e4e5227b%3A0x8b54bfec3fe37a35!2sC.%20Parpall%C3%B3%2C%2018%2C%2046713%20Bellreguart%2C%20Valencia!5e0!3m2!1ses!2ses!4v1651423715677!5m2!1ses!2ses"
