--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,17 +1,18 @@
 <div class="header">
+  <!--<app-lang></app-lang>-->
   <div class="header-container">
     <div class="header-container-img">
       <img src="../../../assets/icons/tai-center-logo-full-color.svg" />
     </div>
     <p class="content-secondary s-25">
-      Tu centro de entrenamiento en Bellreguard
+      {{ "home.welcome" | translate }}
     </p>
     <button
       pButton
       pRipple
       type="button"
       class="p-button-rounded btn-h btn-primary mt-10"
-      label="Acceder"
+      label="{{ 'core.access' | translate }}"
       icon="pi pi-user"
       routerLink="/login"
     ></button>
@@ -24,25 +25,22 @@
         class="p-button-rounded p-button-outlined"
         (click)="move()"
       ></button>
-      <p class="content-secondary">Conoce más</p>
+      <p class="content-secondary">{{ "home.meetus" | translate }}</p>
     </div>
   </div>
 </div>
 <div class="plan-container">
-  <h1 class="hard-title">Equipo Tai en las carreras OCR</h1>
+  <h1 class="hard-title">{{ "home.racingTitle" | translate }}</h1>
   <p class="gallery-description">
-    Hemos estado presente en varias carreras <a>OCR</a>, nuestros atletas no
-    solo pusieron a prueba su destreza fisica, sino que también pasaron un
-    tiempo agradable en familia y amigos, eso sí, la comida y la cerveza al
-    final de la carrera no faltaron!!!
+    {{ "home.racingDescription" | translate }}
   </p>
   <app-gallery></app-gallery>
 </div>
 
 <div class="plan-container" id="tarifas">
-  <h1 class="hard-title">Tarifas</h1>
+  <h1 class="hard-title">{{ "home.rates" | translate }}</h1>
   <div class="plan-container-cards">
-    <p-card header="1 Semana">
+    <p-card header="1 {{ 'home.weekRate' | translate }}">
       <ng-template pTemplate="header">
         <span class="hard-title fs-50">24€</span>
       </ng-template>
@@ -51,7 +49,7 @@
         <p>CROSS TRAINING, G.A.P, H.I.I.T</p>
       </div>
     </p-card>
-    <p-card header="1/2 Mes">
+    <p-card header="1/2 {{ 'home.monthRate' | translate }}">
       <ng-template pTemplate="header">
         <span class="hard-title fs-50">32€</span>
       </ng-template>
@@ -60,7 +58,7 @@
         <p>CROSS TRAINING, G.A.P, H.I.I.T</p>
       </div>
     </p-card>
-    <p-card header="Básico">
+    <p-card header="{{ 'home.basicRate' | translate }}">
       <ng-template pTemplate="header">
         <span class="hard-title fs-50">40€</span>
       </ng-template>
@@ -69,7 +67,7 @@
         <p>CROSS TRAINING, G.A.P, H.I.I.T</p>
       </div>
     </p-card>
-    <p-card header="Intermedio">
+    <p-card header="{{ 'home.intermediateRate' | translate }}">
       <ng-template pTemplate="header">
         <span class="hard-title fs-50">50€</span>
       </ng-template>
@@ -78,7 +76,7 @@
         <p>CROSS TRAINING, G.A.P, H.I.I.T y OPEN CENTER</p>
       </div>
     </p-card>
-    <p-card header="Avanzado">
+    <p-card header="{{ 'home.advancedRate' | translate }}">
       <ng-template pTemplate="header">
         <span class="hard-title fs-50">52€</span>
       </ng-template>
@@ -87,7 +85,7 @@
         <p>CROSS TRAINING, G.A.P, H.I.I.T y OPEN CENTER</p>
       </div>
     </p-card>
-    <p-card header="Bono">
+    <p-card header="{{ 'home.voucherRate' | translate }}">
       <ng-template pTemplate="header">
         <span class="hard-title fs-50">60€</span>
       </ng-template>
@@ -99,7 +97,7 @@
   </div>
 </div>
 <div class="plan-container">
-  <h1 class="hard-title">Calendario</h1>
+  <h1 class="hard-title">{{ "home.schedule" | translate }}</h1>
 </div>
 <app-calendar></app-calendar>
 
